--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.28.0",
+        "react-slick": "^0.30.3",
         "tailwind-merge": "^2.5.4"
     },
     "devDependencies": {
