--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "deploy": "gh-pages -d build"
     },
     "dependencies": {
+        "@types/aos": "^3.0.7",
         "@types/react-router-dom": "^5.3.3",
+        "aos": "^2.3.4",
         "chart.js": "^4.4.7",
         "class-variance-authority": "^0.7.0",
         "lucide-react": "^0.456.0",
