--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,62 @@
+# Node modules
+node_modules/
+
+# Build output
+dist/
+build/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# IDE files
+.vscode/
+.idea/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# TypeScript
+*.tsbuildinfo
+
+# Mac system files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
+# Package locks
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Coverage directory used by testing tools
+coverage/
+
+# Vite cache
+.vite/
+
+# React Testing Library
+.cypress/
+
+# Temporary files
+*.tmp
+*.temp
+
+# System Thumbnails
+Thumbs.db
+
+# Debugging files
+*.log
+
+# Miscellaneous
+*.bak
+*.swp
+*.swpx
+
+# Exclude Firebase local data (if using Firebase Emulator)
+firebase-debug.log
+firestore-export.json
