--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,24 @@
-# Node modules
-node_modules/
-
-# Build output
-dist/
-build/
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
-# IDE files
-.vscode/
-.idea/
+node_modules
+dist
+dist-ssr
+*.local
 
-# TypeScript
-*.tsbuildinfo
-
-# Mac system files
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-
-# Package locks
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-
-# Coverage directory used by testing tools
-coverage/
-
-# Vite cache
-.vite/
-
-# React Testing Library
-.cypress/
-
-# Temporary files
-*.tmp
-*.temp
-
-# System Thumbnails
-Thumbs.db
-
-# Debugging files
-*.log
-
-# Miscellaneous
-*.bak
-*.swp
-*.swpx
-
-# Exclude Firebase local data (if using Firebase Emulator)
-firebase-debug.log
-firestore-export.json
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
