--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "food-ecommerce",
     "private": true,
+    "homepage": "https://hoainamle42.github.io/Ecommerce-food/",
     "version": "0.0.0",
     "type": "module",
     "scripts": {
@@ -10,7 +11,7 @@
         "preview": "vite preview",
         "server": "json-server db.json --port 5001",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
         "@types/aos": "^3.0.7",
@@ -43,6 +44,5 @@
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.11.0",
         "vite": "^5.4.10"
-    },
-    "homepage": "https://hoainamle.github.io/food-ecommerce"
+    }
 }
